--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@
 #title h1 {
     font-family: "Franklin Gothic Condensed Web";
     font-size: 2.5rem;
+    font-weight: bold;
 }
 #footer {
     height: 20rem;
@@ -35,7 +36,7 @@ body {
     background-color: #2c2b2c;
     color: rgb(44, 43, 44);
     font-family: "Roboto Condensed";
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.55;
     margin: 0;
 }
@@ -48,9 +49,17 @@ body {
     margin-bottom: 3rem;
     text-align: justify;
 }
+.recommendation a {
+    color: #00d682;
+    text-decoration: none;
+}
+.recommendation a:hover {
+    text-decoration: underline;
+}
 .recommendation h2 {
     font-family: "Franklin Gothic Condensed Web";
     font-size: 2rem;
+    font-weight: bold;
     line-height: 1.55;
     margin: 0;
     padding-bottom: 0.4em;
@@ -60,12 +69,26 @@ body {
 .recommendation h3 {
     font-family: "Franklin Gothic Condensed Web";
     font-size: 1.3rem;
+    font-weight: bold;
     line-height: 1.6em;
     margin: 0;
     padding-bottom: 0.3em;
     padding-top: 1.1em;
     text-align: left;
     text-transform: uppercase;
+}
+.recommendation h4 {
+    font-family: "Franklin Gothic Condensed Web";
+    font-size: 1.3rem;
+    font-weight: bold;
+    line-height: 1.6em;
+    margin: 0;
+    padding-bottom: 0.3em;
+    padding-top: 0.5em;
+    text-align: left;
+}
+.recommendation li {
+    list-style-type: square;
 }
 .recommendation p {
     margin: 0;
